Fixed the shifting layout with the movie cards, added a footer to the page

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -62,3 +62,8 @@ background-color: #ffffffbf;
 background-color: #6d6d6e66;
 }
 
+.more-cards{
+    padding-left: 6%;
+    
+}
+
